k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
spec:
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  ports:
  - port: 5432
  selector:
    app: order-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: ecommerce-devops-platform-order-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - port: 3002
  selector:
    app: order-service
