k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
spec:
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: product-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: product-db
spec:
  ports:
  - port: 5432
  selector:
    app: product-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: ecommerce-devops-platform-product-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  ports:
  - port: 3000
  selector:
    app: product-service
